--- a/Habr/Habr.ConsoleApp/Habr.ConsoleApp.csproj
+++ b/Habr/Habr.ConsoleApp/Habr.ConsoleApp.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Habr.BusinessLogic\Habr.BusinessLogic.csproj" />
     <ProjectReference Include="..\Habr.DataAccess\Habr.DataAccess.csproj" />
   </ItemGroup>
 
