--- a/Habr/Habr.BusinessLogic/Habr.BusinessLogic.csproj
+++ b/Habr/Habr.BusinessLogic/Habr.BusinessLogic.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\Habr.DataAccess\Habr.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
 </Project>
