--- a/Habr/Common/Habr.Common.csproj
+++ b/Habr/Common/Habr.Common.csproj
@@ -10,4 +10,19 @@
     <Folder Include="DTO\User\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Resourses\ExceptionMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ExceptionMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resourses\ExceptionMessages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ExceptionMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
