--- a/Habr/Habr.WebAPI/appsettings.json
+++ b/Habr/Habr.WebAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "HabrDatabase": "Data Source=LAPTOP-24OH36NB;Integrated Security=True;Initial Catalog = HabrDB"
+  },
+  "Jwt": {
+    "Issuer": "https://localhost:7229",
+    "Audience": "https://localhost:7229",
+    "Key": "QKgB6UVgwfCIUrFmdpnPIlbcxN3xt34s"
   }
 }
