--- a/Habr/Habr.UnitTests/Habr.UnitTests.csproj
+++ b/Habr/Habr.UnitTests/Habr.UnitTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -25,6 +26,10 @@
     <ProjectReference Include="..\Habr.BusinessLogic\Habr.BusinessLogic.csproj" />
     <ProjectReference Include="..\Habr.DataAccess\Habr.DataAccess.csproj" />
     <ProjectReference Include="..\Habr.WebAPI\Habr.WebAPI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="PostServiceTests\" />
   </ItemGroup>
 
 </Project>
