--- a/Habr/Habr.WebAPI/appsettings.json
+++ b/Habr/Habr.WebAPI/appsettings.json
@@ -12,6 +12,8 @@
   "Jwt": {
     "Issuer": "https://localhost:7229",
     "Audience": "https://localhost:7229",
-    "Key": "QKgB6UVgwfCIUrFmdpnPIlbcxN3xt34s"
+    "Key": "QKgB6UVgwfCIUrFmdpnPIlbcxN3xt34s",
+    "AccessLifetimeInHours": "1",
+    "RefreshLifetimeInDays" : "7" 
   }
 }
