Added pagination endpoint Added version 3

--- a/Habr/Habr.WebAPI/appsettings.json
+++ b/Habr/Habr.WebAPI/appsettings.json
@@ -14,6 +14,9 @@
     "Audience": "https://localhost:7229",
     "Key": "QKgB6UVgwfCIUrFmdpnPIlbcxN3xt34s",
     "AccessLifetimeInHours": "1",
-    "RefreshLifetimeInDays" : "7" 
-  }
+    "RefreshLifetimeInDays": "7"
+  },
+  "Posts" : {
+    "PageSize" : "3" 
+  } 
 }
