Added controller and endpoint for creating or updating background job

--- a/Habr/Habr.WebAPI/appsettings.json
+++ b/Habr/Habr.WebAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HabrDatabase": "Data Source=LAPTOP-24OH36NB;Integrated Security=True;Initial Catalog = HabrDB"
+    "HabrDatabase": "Data Source=LAPTOP-24OH36NB;Integrated Security=True;Initial Catalog = HabrDB",
+    "HangfireDatabase": "Data Source=LAPTOP-24OH36NB;Integrated Security=True;Initial Catalog = HangfireDB"
   },
   "Jwt": {
     "Issuer": "https://localhost:7229",
