--- a/Habr/Habr.WebAPI/Habr.WebAPI.csproj
+++ b/Habr/Habr.WebAPI/Habr.WebAPI.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.7.30" />
+    <PackageReference Include="MailKit" Version="3.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
@@ -44,7 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="BackgroundJobs\" />
+    <Folder Include="BackgroundJobs\Context\" />
   </ItemGroup>
 
 </Project>
